--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="https://www.amazon.com.tr/ZoneTAPE-Silikon-Bant-Estetik-Sezaryen-Yan%C4%B1k-Ben-Ald%C4%B1rma/dp/B09CH66MFG/ref=sr_1_1?dib=eyJ2IjoiMSJ9.kJ-KwrSe8upHQi7gjl9fyTOHQeABZ9DMnXUvDy_PyoE.lFH-GohSajyGUweuAP00KSOjPmFUBerknJ1TmWGg9gY&dib_tag=se&m=ASAFXGQAW4QQN&marketplaceID=A33AVAJ2PDY3EV&qid=1758371215&s=merchant-items&sr=1-1" target="_blank" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                            <a href="https://www.amazon.com.tr/ZoneTAPE-Silikon-Bant-Estetik-Sezaryen-Yan%C4%B1k-Ben-Ald%C4%B1rma/dp/B09CH66MFG/ref=pd_sbs_d_sccl_1_1/262-7233715-1776340?pd_rd_w=Skfhj&content-id=amzn1.sym.0225bc8f-f37e-4fff-9ca3-525962a1e525&pf_rd_p=0225bc8f-f37e-4fff-9ca3-525962a1e525&pf_rd_r=PH88VJN1KN5GX1V1BDZ8&pd_rd_wg=GwcX0&pd_rd_r=68309eae-25df-477b-b20c-a87dbd90332c&pd_rd_i=B09CH66MFG&psc=1" target="_blank" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                                 <img src="assets/images/tes1.png" alt="">
                             </a>
                         </div>
