--- a/index.html
+++ b/index.html
@@ -592,6 +592,9 @@
                 <a href="https://www.trendyol.com/zonetape/soft-silikon-bant-kirisiklik-estetik-dikis-skar-keloid-sezaryen-karin-kol-bacak-germe-ben-aldirma-p-77524447/yorumlar?boutiqueId=61&merchantId=169505&filterOverPriceListings=false&sav=true">Tüm Yorumlar</a>
             </div>
             <div class="logos-slider">
+                <div class="head">
+                    <h2>SATIN ALMAK İÇİN TIKLAYIN <img src="assets/images/hand.png" alt="" /></h2>
+                </div>
                 <div class="swiper logos-swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
