--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                                 <p><span>Zonetape, doğal yapısıyla cilde uyumlu olup hiçbir kimyasal yapıştırıcı içermez. Yüksek ve düşük sıcaklıklarda formunu korur, hava koşullarına, radyasyona, ultraviyole ışınlarına, ozona ve oksijene karşı yüksek dayanıklılık gösterir.</span></p>
                                 <p>Cilt, özellikle cerrahi işlemler sonrasında hassas ve kırılgan bir yapıya bürünür. Zonetape silikon bant, bu dönemde cilde ekstra konfor sağlayarak iyileşme sürecini destekler, izlerin görünümünü azaltmaya yardımcı olur ve daha sağlıklı bir cilt dokusu oluşmasına katkıda bulunur. Etkili sonuçlar elde etmek için bantın düzenli olarak 2 ila 6 ay arası kullanılması önerilir.</p>
                             </article>
-                            <a href="products.html" class="detail-btn">
+                            <a href="urunler.html" class="detail-btn">
                                 <span>ÜRÜNLERİMİZ</span>
                             </a>
                         </div>
