--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                     </div>
                 </div>
                 <div class="col col-12 col-md-4 col-lg-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                    <a href="how-is-it-used.html" class="text-3">
+                    <a href="nasil-kullanilir.html" class="text-3">
                         <div class="icon">
                             <img src="assets/images/main-section-3-icon-1.png" alt="" />
                         </div>
