--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                                 Zonetape Soft Silikon Bant ile Kırışıklıklara Son
                                                 <span>Kolajen Desteğiyle Yaşlanmayı Geciktirin!</span>
                                             </h1>
-                                            <p>Zonetape Soft, cildinize gençlik ve tazelik kazandırmak için özel olarak geliştirilmiş bir silikon banttır. İnce çizgi ve kırışıklıkların görünümünü azaltırken, kolajen üretimini destekleyerek cildinizin daha sıkı ve elastik olmasına yardımcı olur.</p>
+                                            <p>Zonetape Soft Silikon Bant, cildinize gençlik ve tazelik kazandırmak için özel olarak geliştirilmiş bir silikon banttır. İnce çizgi ve kırışıklıkların görünümünü azaltırken, kolajen üretimini destekleyerek cildinizin daha sıkı ve elastik olmasına yardımcı olur.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -662,6 +662,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col col-12 col-md-4 col-lg-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                     <a href="nasil-kullanilir.html" class="text-3">
                         <div class="icon">
@@ -681,6 +682,7 @@
                 <div class="col col-12 col-md-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                     <a href="assets/catalog/medzone-katalog.pdf" class="img" target="_blank">
                         <img src="assets/images/main-section-3-img-1.png" alt="" />
+                        <div class="name">KATALOG</div>
                         <div class="arrow">
                             <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1 16L4.125 12.875M16 1H4.75M16 1V12.25M16 1L7.875 9.125" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
