--- a/blog.html
+++ b/blog.html
@@ -157,8 +157,6 @@
                         </div>
                     </a>
                 </div>
-                <div class="col col-12 col-lg-1"></div>
-                <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                     <a class="item" href="yanik-ve-yaralanma-sonrasi-cilt-onarimi-zone-soft-silikon-bant.html">
                         <div class="img"><img src="assets/images/blog-tiny-3.png" alt="" /></div>
@@ -172,6 +170,8 @@
                         </div>
                     </a>
                 </div>
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                     <a class="item" href="sezaryan-sonrasi-bakim-ve-iz-yonetimi-zonetape-soft-silikon-bant.html">
                         <div class="img"><img src="assets/images/blog-tiny-4.png" alt="" /></div>
@@ -184,10 +184,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <div class="col col-12 col-lg-1"></div>
-                <div class="col col-12 col-lg-1"></div>
-                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                </div><div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                     <a class="item" href="estetik-cerrahi-sonrasi-iz-bakimi-zontape-soft-silikon-bant.html">
                         <div class="img"><img src="assets/images/blog-tiny-5.png" alt="" /></div>
                         <div class="text">
@@ -200,6 +197,8 @@
                         </div>
                     </a>
                 </div>
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                     <a class="item" href="genel-saglik-hizmetlerinde-medzone.html">
                         <div class="img"><img src="assets/images/blog-tiny-6.png" alt="" /></div>
@@ -213,6 +212,7 @@
                         </div>
                     </a>
                 </div>
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200"></div>
                 <div class="col col-12 col-lg-1"></div>
             </div>
         </div>
