--- a/dokumanlar.html
+++ b/dokumanlar.html
@@ -271,6 +271,17 @@
                 delay: 4000,
                 disableOnInteraction: true,
             },
+            breakpoints: {
+                0: {
+                    slidesPerView: 1,
+                },
+                640: {
+                    slidesPerView: 2,
+                },
+                991: {
+                    slidesPerView: 3,
+                },
+            },
         });
     </script>
 </body>
